<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.istea.agustinlema.todoapp.activities.ItemEditActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/edtTitle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskBody"/>
        <EditText
            android:id="@+id/edtBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="text"
            android:hint="@string/taskBodyHint"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isImportant"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>
