<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:weightSum="1"
    tools:context="com.istea.agustinlema.todoapp.activities.ItemViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginRight="@dimen/rowMarginRight">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/rowMarginRight">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/taskBody"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBodyView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isImportant"/>
        <ImageView
            android:id="@+id/imgIsImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"/>
    </TableRow>

</TableLayout>
